--- a/departments.html
+++ b/departments.html
@@ -6,6 +6,7 @@
   <title>Departments — ABES Engineering College</title>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
+  <style></style>
 </head>
 <body>
   <header class="site-header">
